[gd_scene load_steps=67 format=2]

[ext_resource path="res://assets/images/world/chapter_0.1/intro_pyramid.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/TalkingPyramid.gd" type="Script" id=2]
[ext_resource path="res://src/StateMachine/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://src/StateMachine/State.gd" type="Script" id=4]
[ext_resource path="res://assets/images/world/chapter_0.1/light_circle.png" type="Texture" id=5]
[ext_resource path="res://assets/images/world/chapter_0.1/light_circle_mask.png" type="Texture" id=6]
[ext_resource path="res://src/Levels/ZIndexChanger.gd" type="Script" id=7]
[ext_resource path="res://assets/images/world/particle_small_fire.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 30, 40 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 30, 0, 30, 40 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 60, 0, 30, 40 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 90, 0, 30, 40 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 120, 0, 30, 40 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 150, 0, 30, 40 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 180, 0, 30, 40 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 210, 0, 30, 40 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 0, 40, 30, 40 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 30, 40, 30, 40 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 60, 40, 30, 40 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 90, 40, 30, 40 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 120, 40, 30, 40 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 150, 40, 30, 40 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 180, 40, 30, 40 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 210, 40, 30, 40 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 0, 80, 30, 40 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 30, 80, 30, 40 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 60, 80, 30, 40 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 90, 80, 30, 40 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 8 )
region = Rect2( 120, 80, 30, 40 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 8 )
region = Rect2( 150, 80, 30, 40 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 8 )
region = Rect2( 180, 80, 30, 40 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 210, 80, 30, 40 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 0, 120, 30, 40 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 8 )
region = Rect2( 30, 120, 30, 40 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 8 )
region = Rect2( 60, 120, 30, 40 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 8 )
region = Rect2( 90, 120, 30, 40 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 8 )
region = Rect2( 120, 120, 30, 40 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 8 )
region = Rect2( 150, 120, 30, 40 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 8 )
region = Rect2( 180, 120, 30, 40 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 8 )
region = Rect2( 210, 120, 30, 40 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 8 )
region = Rect2( 0, 160, 30, 40 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 8 )
region = Rect2( 30, 160, 30, 40 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 8 )
region = Rect2( 60, 160, 30, 40 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 8 )
region = Rect2( 90, 160, 30, 40 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 8 )
region = Rect2( 120, 160, 30, 40 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 8 )
region = Rect2( 150, 160, 30, 40 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 8 )
region = Rect2( 180, 160, 30, 40 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 8 )
region = Rect2( 210, 160, 30, 40 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 8 )
region = Rect2( 0, 200, 30, 40 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 8 )
region = Rect2( 30, 200, 30, 40 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 8 )
region = Rect2( 60, 200, 30, 40 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 8 )
region = Rect2( 90, 200, 30, 40 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 8 )
region = Rect2( 120, 200, 30, 40 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 8 )
region = Rect2( 150, 200, 30, 40 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 8 )
region = Rect2( 180, 200, 30, 40 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 8 )
region = Rect2( 210, 200, 30, 40 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 8 )
region = Rect2( 0, 240, 30, 40 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 8 )
region = Rect2( 30, 240, 30, 40 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 8 )
region = Rect2( 60, 240, 30, 40 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 8 )
region = Rect2( 90, 240, 30, 40 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 8 )
region = Rect2( 120, 240, 30, 40 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 8 )
region = Rect2( 150, 240, 30, 40 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 8 )
region = Rect2( 180, 240, 30, 40 )

[sub_resource type="SpriteFrames" id=58]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ) ],
"loop": true,
"name": "default",
"speed": 50.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 33.3839

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.7715, 11.4565 )

[node name="TalkingPyramid" type="Node2D"]
script = ExtResource( 2 )

[node name="LightSprite" type="Sprite" parent="."]
modulate = Color( 1, 0.709804, 0.439216, 0.666667 )
position = Vector2( 1.61233, -29.0932 )
scale = Vector2( 11, 11 )
z_index = 1
texture = ExtResource( 5 )

[node name="Fire" type="AnimatedSprite" parent="."]
position = Vector2( 1.43729, -25.1929 )
scale = Vector2( 0.7, 0.7 )
z_index = 4
frames = SubResource( 58 )
frame = 4
playing = true

[node name="Sprite" type="Sprite" parent="."]
z_index = 2
texture = ExtResource( 1 )
hframes = 2

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 0.594604, 14.2705 )
shape = SubResource( 1 )

[node name="StateMachine" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node2D" parent="StateMachine"]
script = ExtResource( 4 )

[node name="LightMask" type="Light2D" parent="."]
position = Vector2( 1, 20 )
texture = ExtResource( 6 )
texture_scale = 5.7
energy = 1.09
mode = 3
range_item_cull_mask = 32

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -13.0812, 17.9941, 1.72285, 23.1913, 14.952, 17.5216, 1.0929, 11.3795 )

[node name="ZIndexChanger" type="Area2D" parent="."]
modulate = Color( 0, 1, 1, 1 )
script = ExtResource( 7 )
zindex_on_entered = -1

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZIndexChanger"]
position = Vector2( -0.157486, 30.0806 )
shape = SubResource( 2 )
